--- a/node/src/views/clients/layout/default.pug
+++ b/node/src/views/clients/layout/default.pug
@@ -12,8 +12,11 @@ html
 
 
     block main
+    .facebook-float-button 
+      a.btn.btn-primary.facebook-btn(href="https://web.facebook.com/nguyen.van.sam.1555", target="_blank") 
+        i.fa-brands.fa-facebook
     .chat-float-button
-      a.btn.btn-primary.chat-btn(href="/chat", data-bs-toggle="tooltip", data-bs-placement="left", title="Chat với chúng tôi")
+      a.btn.btn-warning.chat-btn(href="/chat", data-bs-toggle="tooltip", data-bs-placement="left", title="Chat với chúng tôi")
          i.fas.fa-comments
 
     include ../patirals/footer.pug
